--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -18,18 +18,19 @@
   "homepage": "https://github.com/ltdat6499/lemoncat#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "ejs": "~2.6.1",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "graphql": "^15.5.0",
+    "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.4",
     "lodash": "^4.17.21",
-    "require-text": "0.0.1",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "ejs": "~2.6.1"
+    "pg": "^8.6.0",
+    "require-text": "0.0.1"
   }
 }
