--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "faker": "^5.5.3",
     "graphql": "^15.5.0",
     "graphql-scalars": "^1.9.0",
     "graphql-tools": "^7.0.4",
     "http-errors": "~1.6.3",
-    "join-monster-graphql-tools-adapter": "^0.1.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.4",
     "lodash": "^4.17.21",
