--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "faker": "^5.5.3",
+    "flickr-sdk": "^3.10.0",
     "graphql": "^15.5.0",
     "graphql-scalars": "^1.9.0",
     "graphql-tools": "^7.0.4",
@@ -33,7 +34,10 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.4",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.6.0",
     "rbac": "^5.0.3",
     "require-text": "0.0.1"
