--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.1",
+    "big-integer": "^1.6.48",
+    "change-case": "^4.1.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -40,6 +42,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
     "rbac": "^5.0.3",
-    "require-text": "0.0.1"
+    "require-text": "0.0.1",
+    "uuid": "^8.3.2"
   }
 }
