--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.1",
     "big-integer": "^1.6.48",
+    "body-parser": "^1.19.0",
     "change-case": "^4.1.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "express-session": "^1.17.1",
     "faker": "^5.5.3",
     "flickr-sdk": "^3.10.0",
     "graphql": "^15.5.0",
@@ -39,6 +42,7 @@
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
     "rbac": "^5.0.3",
