--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
   "homepage": "https://github.com/ltdat6499/lemoncat#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "big-integer": "^1.6.48",
     "body-parser": "^1.19.0",
     "change-case": "^4.1.2",
+    "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.5.1",
     "ejs": "~2.6.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
@@ -42,10 +45,14 @@
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^8.6.0",
     "rbac": "^5.0.3",
+    "request": "^2.88.2",
     "require-text": "0.0.1",
     "uuid": "^8.3.2"
   }
