--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ltdat6499/lemoncat#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "acl": "^0.4.11",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "big-integer": "^1.6.48",
