--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
+    "node-cron": "^3.0.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
