--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
 version: "3"
 services:
   database:
-    image: "postgres"
+    image: postgres:10-alpine
     environment:
+      - POSTGRES_DB=lemoncat
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=docker
-      - POSTGRES_DB=lemoncat
     container_name: postgres
     restart: always
-    volumes:
-      - ./var/lib/postgresql/data/
     ports:
       - "5432:5432"
     network_mode: "host"
