--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "big-integer": "^1.6.48",
     "body-parser": "^1.19.0",
     "change-case": "^4.1.2",
+    "cheerio": "^1.0.0-rc.10",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
