--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "rbac": "^5.0.3",
     "request": "^2.88.2",
     "require-text": "0.0.1",
+    "selenium-webdriver": "^4.0.0-beta.4",
     "uuid": "^8.3.2"
   }
 }
