--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "graphql": "^15.5.0",
     "graphql-scalars": "^1.9.0",
     "graphql-tools": "^7.0.4",
+    "html-minifier": "^4.0.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.4",
