--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "homepage": "https://github.com/ltdat6499/lemoncat#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@tensorflow/tfjs": "^3.8.0",
     "acl": "^0.4.11",
     "axios": "^0.21.1",
+    "bad-words": "^3.0.4",
+    "bayes": "^1.0.0",
     "bcrypt": "^5.0.1",
     "big-integer": "^1.6.48",
     "body-parser": "^1.19.0",
@@ -30,14 +33,18 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csv-parser": "^3.0.0",
     "debug": "~2.6.9",
     "dotenv": "^8.5.1",
     "ejs": "~2.6.1",
+    "exceljs": "^4.2.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.1",
     "faker": "^5.5.3",
     "flickr-sdk": "^3.10.0",
+    "generate-password": "^1.6.1",
+    "genid": "^0.1.0",
     "graphql": "^15.5.0",
     "graphql-scalars": "^1.9.0",
     "graphql-tools": "^7.0.4",
@@ -50,6 +57,7 @@
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "node-cron": "^3.0.0",
+    "node-kmeans": "^1.1.9",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
@@ -61,6 +69,7 @@
     "request": "^2.88.2",
     "require-text": "0.0.1",
     "selenium-webdriver": "^4.0.0-beta.4",
+    "spam-check": "^1.0.0",
     "striptags": "^3.2.0",
     "uuid": "^8.3.2",
     "wilson-score-rank": "^2.0.1"
