--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "request": "^2.88.2",
     "require-text": "0.0.1",
     "selenium-webdriver": "^4.1.0",
+    "snakecase-keys": "^5.1.2",
     "spam-check": "^1.0.0",
     "striptags": "^3.2.0",
     "uuid": "^8.3.2",
